drm/framebuffer: Acquire internal references on GEM handles (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33041,6 +33041,7 @@
 	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
 	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
+	patches.suse/drm-framebuffer-Acquire-internal-references-on-GEM-h.patch
 	patches.suse/drm-gem-Fix-race-in-drm_gem_handle_create_tail.patch
 	patches.suse/maple_tree-fix-mt_destroy_walk-on-root-leaf-node.patch
 	patches.suse/kasan-remove-kasan_find_vm_area-to-prevent-possible-.patch
