--- a/series.conf
+++ b/series.conf
@@ -8487,6 +8487,7 @@
 	patches.kernel.org/6.12.39-003-drm-amdgpu-discovery-use-specific-ip_discover.patch
 	patches.kernel.org/6.12.39-004-drm-amdgpu-ip_discovery-add-missing-ip_discov.patch
 	patches.kernel.org/6.12.39-005-crypto-s390-sha-Fix-uninitialized-variable-in.patch
+	patches.kernel.org/6.12.39-006-drm-amdgpu-Replace-Mutex-with-Spinlock-for-RL.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
