scripts/gdb: fix interrupts display after MCP on x86 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8570,6 +8570,7 @@
 	patches.kernel.org/6.12.39-086-kallsyms-fix-build-without-execinfo.patch
 	patches.kernel.org/6.12.39-087-maple_tree-fix-mt_destroy_walk-on-root-leaf-n.patch
 	patches.kernel.org/6.12.39-088-mm-fix-the-inaccurate-memory-statistics-issue.patch
+	patches.kernel.org/6.12.39-089-scripts-gdb-fix-interrupts-display-after-MCP-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
