--- a/series.conf
+++ b/series.conf
@@ -8558,6 +8558,7 @@
 	patches.kernel.org/6.12.39-074-drm-gem-Acquire-references-on-GEM-handles-for.patch
 	patches.kernel.org/6.12.39-075-drm-sched-Increment-job-count-before-swapping.patch
 	patches.kernel.org/6.12.39-076-drm-ttm-fix-error-handling-in-ttm_buffer_obje.patch
+	patches.kernel.org/6.12.39-077-drm-gem-Fix-race-in-drm_gem_handle_create_tai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
