--- a/series.conf
+++ b/series.conf
@@ -8569,6 +8569,7 @@
 	patches.kernel.org/6.12.39-085-Revert-PCI-ACPI-Fix-allocated-memory-release-.patch
 	patches.kernel.org/6.12.39-086-kallsyms-fix-build-without-execinfo.patch
 	patches.kernel.org/6.12.39-087-maple_tree-fix-mt_destroy_walk-on-root-leaf-n.patch
+	patches.kernel.org/6.12.39-088-mm-fix-the-inaccurate-memory-statistics-issue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
