--- a/series.conf
+++ b/series.conf
@@ -8552,6 +8552,7 @@
 	patches.kernel.org/6.12.39-068-wifi-mt76-mt7921-prevent-decap-offload-config.patch
 	patches.kernel.org/6.12.39-069-wifi-mt76-mt7925-prevent-NULL-pointer-derefer.patch
 	patches.kernel.org/6.12.39-070-wifi-mt76-mt7925-fix-the-wrong-config-for-tx-.patch
+	patches.kernel.org/6.12.39-071-wifi-mt76-mt7925-fix-invalid-array-index-in-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
