--- a/series.conf
+++ b/series.conf
@@ -8561,6 +8561,7 @@
 	patches.kernel.org/6.12.39-077-drm-gem-Fix-race-in-drm_gem_handle_create_tai.patch
 	patches.kernel.org/6.12.39-078-drm-xe-bmg-fix-compressed-VRAM-handling.patch
 	patches.kernel.org/6.12.39-079-Revert-drm-xe-xe2-Enable-Indirect-Ring-State-.patch
+	patches.kernel.org/6.12.39-080-usb-gadget-u_serial-Fix-race-condition-in-TTY.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
