--- a/series.conf
+++ b/series.conf
@@ -8608,6 +8608,7 @@
 	patches.kernel.org/6.12.39-124-netfilter-flowtable-account-for-Ethernet-head.patch
 	patches.kernel.org/6.12.39-125-net-appletalk-Fix-device-refcount-leak-in-atr.patch
 	patches.kernel.org/6.12.39-126-ibmvnic-Fix-hardcoded-NUM_RX_STATS-NUM_TX_STA.patch
+	patches.kernel.org/6.12.39-127-net-phy-microchip-Use-genphy_soft_reset-to-pu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
