--- a/series.conf
+++ b/series.conf
@@ -8635,6 +8635,7 @@
 	patches.kernel.org/6.12.39-151-btrfs-fix-assertion-when-building-free-space-.patch
 	patches.kernel.org/6.12.39-152-vt-add-missing-notification-when-switching-ba.patch
 	patches.kernel.org/6.12.39-153-bpf-Adjust-free-target-to-avoid-global-starva.patch
+	patches.kernel.org/6.12.39-154-riscv-vdso-Exclude-.rodata-from-the-PT_DYNAMI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
