--- a/series.conf
+++ b/series.conf
@@ -8609,6 +8609,7 @@
 	patches.kernel.org/6.12.39-125-net-appletalk-Fix-device-refcount-leak-in-atr.patch
 	patches.kernel.org/6.12.39-126-ibmvnic-Fix-hardcoded-NUM_RX_STATS-NUM_TX_STA.patch
 	patches.kernel.org/6.12.39-127-net-phy-microchip-Use-genphy_soft_reset-to-pu.patch
+	patches.kernel.org/6.12.39-128-net-phy-microchip-limit-100M-workaround-to-li.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
