atm: clip: Fix memory leak of struct clip_vcc (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8522,6 +8522,7 @@
 	patches.kernel.org/6.12.39-038-net-phy-smsc-Force-predictable-MDI-X-state-on.patch
 	patches.kernel.org/6.12.39-039-net-phy-smsc-Fix-link-failure-in-forced-mode-.patch
 	patches.kernel.org/6.12.39-040-atm-clip-Fix-potential-null-ptr-deref-in-to_a.patch
+	patches.kernel.org/6.12.39-041-atm-clip-Fix-memory-leak-of-struct-clip_vcc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
