erofs: get rid of `z_erofs_next_pcluster_t` (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8601,6 +8601,7 @@
 	patches.kernel.org/6.12.39-117-nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 	patches.kernel.org/6.12.39-118-drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
 	patches.kernel.org/6.12.39-119-erofs-free-pclusters-if-no-cached-folio-is-at.patch
+	patches.kernel.org/6.12.39-120-erofs-get-rid-of-z_erofs_next_pcluster_t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
