--- a/series.conf
+++ b/series.conf
@@ -8509,6 +8509,7 @@
 	patches.kernel.org/6.12.39-025-bnxt_en-eliminate-the-compile-warning-in-bnxt.patch
 	patches.kernel.org/6.12.39-026-arm64-poe-Handle-spurious-Overlay-faults.patch
 	patches.kernel.org/6.12.39-027-net-phy-qcom-move-the-WoL-function-to-shared-.patch
+	patches.kernel.org/6.12.39-028-net-phy-qcom-qca808x-Fix-WoL-issue-by-utilizi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
