--- a/series.conf
+++ b/series.conf
@@ -8598,6 +8598,7 @@
 	patches.kernel.org/6.12.39-114-wifi-rt2x00-fix-remove-callback-type-mismatch.patch
 	patches.kernel.org/6.12.39-115-drm-nouveau-gsp-fix-potential-leak-of-memory-.patch
 	patches.kernel.org/6.12.39-116-wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925.patch
+	patches.kernel.org/6.12.39-117-nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
