vsock: Fix transport_* TOCTOU (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8515,6 +8515,7 @@
 	patches.kernel.org/6.12.39-031-tipc-Fix-use-after-free-in-tipc_conn_close.patch
 	patches.kernel.org/6.12.39-032-tcp-Correct-signedness-in-skb-remaining-space.patch
 	patches.kernel.org/6.12.39-033-vsock-Fix-transport_-g2h-h2g-TOCTOU.patch
+	patches.kernel.org/6.12.39-034-vsock-Fix-transport_-TOCTOU.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
