vsock: Fix IOCTL_VM_SOCKETS_GET_LOCAL_CID to check also `transport_local` (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8516,6 +8516,7 @@
 	patches.kernel.org/6.12.39-032-tcp-Correct-signedness-in-skb-remaining-space.patch
 	patches.kernel.org/6.12.39-033-vsock-Fix-transport_-g2h-h2g-TOCTOU.patch
 	patches.kernel.org/6.12.39-034-vsock-Fix-transport_-TOCTOU.patch
+	patches.kernel.org/6.12.39-035-vsock-Fix-IOCTL_VM_SOCKETS_GET_LOCAL_CID-to-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
