clk: imx: Fix an out-of-bounds access in dispmix_csr_clk_dev_data (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8576,6 +8576,7 @@
 	patches.kernel.org/6.12.39-092-mm-vmalloc-leave-lazy-MMU-mode-on-PTE-mapping.patch
 	patches.kernel.org/6.12.39-093-lib-alloc_tag-do-not-acquire-non-existent-loc.patch
 	patches.kernel.org/6.12.39-094-rust-init-allow-dead_code-warnings-for-Rust-1.patch
+	patches.kernel.org/6.12.39-095-clk-imx-Fix-an-out-of-bounds-access-in-dispmi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
