perf/core: Fix the WARN_ON_ONCE is out of lock protected region (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8496,6 +8496,7 @@
 	patches.kernel.org/6.12.39-012-ASoC-Intel-add-sof_sdw_get_tplg_files-ops.patch
 	patches.kernel.org/6.12.39-013-ASoC-Intel-soc-acpi-intel-arl-match-set-get_f.patch
 	patches.kernel.org/6.12.39-014-ASoC-Intel-soc-acpi-arl-Correct-order-of-cs42.patch
+	patches.kernel.org/6.12.39-015-perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
