io_uring: make fallocate be hashed work (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8624,6 +8624,7 @@
 	patches.kernel.org/6.12.39-140-um-vector-Reduce-stack-usage-in-vector_eth_co.patch
 	patches.kernel.org/6.12.39-141-ASoC-SOF-Intel-hda-Use-devm_kstrdup-to-avoid-.patch
 	patches.kernel.org/6.12.39-142-ALSA-hda-realtek-Add-mic-mute-LED-setup-for-A.patch
+	patches.kernel.org/6.12.39-143-io_uring-make-fallocate-be-hashed-work.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
