--- a/series.conf
+++ b/series.conf
@@ -8483,6 +8483,7 @@
 	patches.kernel.org/6.12.38-001-x86-CPU-AMD-Properly-check-the-TSA-microcode.patch
 	patches.kernel.org/6.12.38-002-Linux-6.12.38.patch
 	patches.kernel.org/6.12.39-001-eventpoll-don-t-decrement-ep-refcount-while-s.patch
+	patches.kernel.org/6.12.39-002-drm-exynos-exynos7_drm_decon-add-vblank-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
