ASoC: Intel: sof-function-topology-lib: Print out the unsupported dmic count (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8584,6 +8584,7 @@
 	patches.kernel.org/6.12.39-100-ksmbd-fix-a-mount-write-count-leak-in-ksmbd_v.patch
 	patches.kernel.org/6.12.39-101-erofs-fix-to-add-missing-tracepoint-in-erofs_.patch
 	patches.kernel.org/6.12.39-102-erofs-address-D-cache-aliasing.patch
+	patches.kernel.org/6.12.39-103-ASoC-Intel-sof-function-topology-lib-Print-ou.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
