wifi: cfg80211: fix S1G beacon head validation in nl80211 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8588,6 +8588,7 @@
 	patches.kernel.org/6.12.39-104-netlink-Fix-rmem-check-in-netlink_broadcast_d.patch
 	patches.kernel.org/6.12.39-105-netlink-make-sure-we-allow-at-least-one-dump-.patch
 	patches.kernel.org/6.12.39-106-netfs-Fix-ref-leak-on-inserted-extra-subreq-i.patch
+	patches.kernel.org/6.12.39-107-wifi-cfg80211-fix-S1G-beacon-head-validation-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
