--- a/series.conf
+++ b/series.conf
@@ -8549,6 +8549,7 @@
 	patches.kernel.org/6.12.39-065-pwm-mediatek-Ensure-to-disable-clocks-in-erro.patch
 	patches.kernel.org/6.12.39-066-wifi-prevent-A-MSDU-attacks-in-mesh-networks.patch
 	patches.kernel.org/6.12.39-067-wifi-mwifiex-discard-erroneous-disassoc-frame.patch
+	patches.kernel.org/6.12.39-068-wifi-mt76-mt7921-prevent-decap-offload-config.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
