net: phy: smsc: Fix Auto-MDIX configuration when disabled by strap (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8518,6 +8518,7 @@
 	patches.kernel.org/6.12.39-034-vsock-Fix-transport_-TOCTOU.patch
 	patches.kernel.org/6.12.39-035-vsock-Fix-IOCTL_VM_SOCKETS_GET_LOCAL_CID-to-c.patch
 	patches.kernel.org/6.12.39-036-net-stmmac-Fix-interrupt-handling-for-level-t.patch
+	patches.kernel.org/6.12.39-037-net-phy-smsc-Fix-Auto-MDIX-configuration-when.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
