--- a/series.conf
+++ b/series.conf
@@ -8500,6 +8500,7 @@
 	patches.kernel.org/6.12.39-016-irqchip-irq-msi-lib-Select-CONFIG_GENERIC_MSI.patch
 	patches.kernel.org/6.12.39-017-sched-core-Fix-migrate_swap-vs.-hotplug.patch
 	patches.kernel.org/6.12.39-018-perf-Revert-to-requiring-CAP_SYS_ADMIN-for-up.patch
+	patches.kernel.org/6.12.39-019-ASoC-cs35l56-probe-should-fail-if-the-device-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
