x86/mce: Make sure CMCI banks are cleared during shutdown on Intel (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8534,6 +8534,7 @@
 	patches.kernel.org/6.12.39-050-x86-mce-amd-Fix-threshold-limit-reset.patch
 	patches.kernel.org/6.12.39-051-x86-mce-Don-t-remove-sysfs-if-thresholding-sy.patch
 	patches.kernel.org/6.12.39-052-x86-mce-Ensure-user-polling-settings-are-hono.patch
+	patches.kernel.org/6.12.39-053-x86-mce-Make-sure-CMCI-banks-are-cleared-duri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
