bpf: Adjust free target to avoid global starvation of LRU map (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8634,6 +8634,7 @@
 	patches.kernel.org/6.12.39-150-net-mana-Record-doorbell-physical-address-in-.patch
 	patches.kernel.org/6.12.39-151-btrfs-fix-assertion-when-building-free-space-.patch
 	patches.kernel.org/6.12.39-152-vt-add-missing-notification-when-switching-ba.patch
+	patches.kernel.org/6.12.39-153-bpf-Adjust-free-target-to-avoid-global-starva.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
