bnxt_en: eliminate the compile warning in bnxt_request_irq due to CONFIG_RFS_ACCEL (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8506,6 +8506,7 @@
 	patches.kernel.org/6.12.39-022-pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 	patches.kernel.org/6.12.39-023-fix-proc_sys_compare-handling-of-in-lookup-de.patch
 	patches.kernel.org/6.12.39-024-sched-deadline-Fix-dl_server-runtime-calculat.patch
+	patches.kernel.org/6.12.39-025-bnxt_en-eliminate-the-compile-warning-in-bnxt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
