--- a/series.conf
+++ b/series.conf
@@ -8495,6 +8495,7 @@
 	patches.kernel.org/6.12.39-011-ASoC-soc-acpi-add-get_function_tplg_files-ops.patch
 	patches.kernel.org/6.12.39-012-ASoC-Intel-add-sof_sdw_get_tplg_files-ops.patch
 	patches.kernel.org/6.12.39-013-ASoC-Intel-soc-acpi-intel-arl-match-set-get_f.patch
+	patches.kernel.org/6.12.39-014-ASoC-Intel-soc-acpi-arl-Correct-order-of-cs42.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
