--- a/series.conf
+++ b/series.conf
@@ -8526,6 +8526,7 @@
 	patches.kernel.org/6.12.39-042-atm-clip-Fix-infinite-recursive-call-of-clip_.patch
 	patches.kernel.org/6.12.39-043-atm-clip-Fix-NULL-pointer-dereference-in-vcc_.patch
 	patches.kernel.org/6.12.39-044-net-ethernet-ti-am65-cpsw-nuss-Fix-skb-size-b.patch
+	patches.kernel.org/6.12.39-045-net-sched-Abort-__tc_modify_qdisc-if-parent-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
