--- a/series.conf
+++ b/series.conf
@@ -8582,6 +8582,7 @@
 	patches.kernel.org/6.12.39-098-clk-scmi-Handle-case-where-child-clocks-are-i.patch
 	patches.kernel.org/6.12.39-099-smb-server-make-use-of-rdma_destroy_qp.patch
 	patches.kernel.org/6.12.39-100-ksmbd-fix-a-mount-write-count-leak-in-ksmbd_v.patch
+	patches.kernel.org/6.12.39-101-erofs-fix-to-add-missing-tracepoint-in-erofs_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
