--- a/series.conf
+++ b/series.conf
@@ -8646,6 +8646,7 @@
 	patches.kernel.org/6.12.39-162-ksmbd-fix-potential-use-after-free-in-oplock-.patch
 	patches.kernel.org/6.12.39-163-arm64-Filter-out-SME-hwcaps-when-FEAT_SME-isn.patch
 	patches.kernel.org/6.12.39-164-crypto-ecdsa-Harden-against-integer-overflows.patch
+	patches.kernel.org/6.12.39-165-rseq-Fix-segfault-on-registration-when-rseq_c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
