netlink: make sure we allow at least one dump skb (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8586,6 +8586,7 @@
 	patches.kernel.org/6.12.39-102-erofs-address-D-cache-aliasing.patch
 	patches.kernel.org/6.12.39-103-ASoC-Intel-sof-function-topology-lib-Print-ou.patch
 	patches.kernel.org/6.12.39-104-netlink-Fix-rmem-check-in-netlink_broadcast_d.patch
+	patches.kernel.org/6.12.39-105-netlink-make-sure-we-allow-at-least-one-dump-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
