um: vector: Reduce stack usage in vector_eth_configure() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8621,6 +8621,7 @@
 	patches.kernel.org/6.12.39-137-bnxt_en-Set-DMA-unmap-len-correctly-for-XDP_R.patch
 	patches.kernel.org/6.12.39-138-ublk-sanity-check-add_dev-input-for-underflow.patch
 	patches.kernel.org/6.12.39-139-atm-idt77252-Add-missing-dma_map_error.patch
+	patches.kernel.org/6.12.39-140-um-vector-Reduce-stack-usage-in-vector_eth_co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
