--- a/series.conf
+++ b/series.conf
@@ -8507,6 +8507,7 @@
 	patches.kernel.org/6.12.39-023-fix-proc_sys_compare-handling-of-in-lookup-de.patch
 	patches.kernel.org/6.12.39-024-sched-deadline-Fix-dl_server-runtime-calculat.patch
 	patches.kernel.org/6.12.39-025-bnxt_en-eliminate-the-compile-warning-in-bnxt.patch
+	patches.kernel.org/6.12.39-026-arm64-poe-Handle-spurious-Overlay-faults.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
