--- a/series.conf
+++ b/series.conf
@@ -8533,6 +8533,7 @@
 	patches.kernel.org/6.12.39-049-x86-mce-amd-Add-default-names-for-MCA-banks-a.patch
 	patches.kernel.org/6.12.39-050-x86-mce-amd-Fix-threshold-limit-reset.patch
 	patches.kernel.org/6.12.39-051-x86-mce-Don-t-remove-sysfs-if-thresholding-sy.patch
+	patches.kernel.org/6.12.39-052-x86-mce-Ensure-user-polling-settings-are-hono.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
