--- a/series.conf
+++ b/series.conf
@@ -8556,6 +8556,7 @@
 	patches.kernel.org/6.12.39-072-drm-imagination-Fix-kernel-crash-when-hard-re.patch
 	patches.kernel.org/6.12.39-073-drm-amdkfd-Don-t-call-mmput-from-MMU-notifier.patch
 	patches.kernel.org/6.12.39-074-drm-gem-Acquire-references-on-GEM-handles-for.patch
+	patches.kernel.org/6.12.39-075-drm-sched-Increment-job-count-before-swapping.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
