--- a/series.conf
+++ b/series.conf
@@ -8577,6 +8577,7 @@
 	patches.kernel.org/6.12.39-093-lib-alloc_tag-do-not-acquire-non-existent-loc.patch
 	patches.kernel.org/6.12.39-094-rust-init-allow-dead_code-warnings-for-Rust-1.patch
 	patches.kernel.org/6.12.39-095-clk-imx-Fix-an-out-of-bounds-access-in-dispmi.patch
+	patches.kernel.org/6.12.39-096-x86-rdrand-Disable-RDSEED-on-AMD-Cyan-Skillfi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
