selftests: net: lib: Move logging from forwarding/lib.sh here (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8610,6 +8610,7 @@
 	patches.kernel.org/6.12.39-126-ibmvnic-Fix-hardcoded-NUM_RX_STATS-NUM_TX_STA.patch
 	patches.kernel.org/6.12.39-127-net-phy-microchip-Use-genphy_soft_reset-to-pu.patch
 	patches.kernel.org/6.12.39-128-net-phy-microchip-limit-100M-workaround-to-li.patch
+	patches.kernel.org/6.12.39-129-selftests-net-lib-Move-logging-from-forwardin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
