--- a/series.conf
+++ b/series.conf
@@ -8642,6 +8642,7 @@
 	patches.kernel.org/6.12.39-158-selftests-bpf-adapt-one-more-case-in-test_lru.patch
 	patches.kernel.org/6.12.39-159-erofs-fix-rare-pcluster-memory-leak-after-unm.patch
 	patches.kernel.org/6.12.39-160-net-wangxun-revert-the-adjustment-of-the-IRQ-.patch
+	patches.kernel.org/6.12.39-161-kasan-remove-kasan_find_vm_area-to-prevent-po.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
