--- a/series.conf
+++ b/series.conf
@@ -8541,6 +8541,7 @@
 	patches.kernel.org/6.12.39-057-KVM-Allow-CPU-to-reschedule-while-setting-per.patch
 	patches.kernel.org/6.12.39-058-ALSA-ad1816a-Fix-potential-NULL-pointer-deref.patch
 	patches.kernel.org/6.12.39-059-ASoC-fsl_sai-Force-a-software-reset-when-star.patch
+	patches.kernel.org/6.12.39-060-gre-Fix-IPv6-multicast-route-creation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
