vsock: fix `vsock_proto` declaration (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8511,6 +8511,7 @@
 	patches.kernel.org/6.12.39-027-net-phy-qcom-move-the-WoL-function-to-shared-.patch
 	patches.kernel.org/6.12.39-028-net-phy-qcom-qca808x-Fix-WoL-issue-by-utilizi.patch
 	patches.kernel.org/6.12.39-029-netlink-Fix-wraparounds-of-sk-sk_rmem_alloc.patch
+	patches.kernel.org/6.12.39-030-vsock-fix-vsock_proto-declaration.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
