wifi: mwifiex: discard erroneous disassoc frames on STA interface (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8548,6 +8548,7 @@
 	patches.kernel.org/6.12.39-064-pwm-Fix-invalid-state-detection.patch
 	patches.kernel.org/6.12.39-065-pwm-mediatek-Ensure-to-disable-clocks-in-erro.patch
 	patches.kernel.org/6.12.39-066-wifi-prevent-A-MSDU-attacks-in-mesh-networks.patch
+	patches.kernel.org/6.12.39-067-wifi-mwifiex-discard-erroneous-disassoc-frame.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
