ksmbd: fix potential use-after-free in oplock/lease break ack (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8643,6 +8643,7 @@
 	patches.kernel.org/6.12.39-159-erofs-fix-rare-pcluster-memory-leak-after-unm.patch
 	patches.kernel.org/6.12.39-160-net-wangxun-revert-the-adjustment-of-the-IRQ-.patch
 	patches.kernel.org/6.12.39-161-kasan-remove-kasan_find_vm_area-to-prevent-po.patch
+	patches.kernel.org/6.12.39-162-ksmbd-fix-potential-use-after-free-in-oplock-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
