--- a/series.conf
+++ b/series.conf
@@ -8585,6 +8585,7 @@
 	patches.kernel.org/6.12.39-101-erofs-fix-to-add-missing-tracepoint-in-erofs_.patch
 	patches.kernel.org/6.12.39-102-erofs-address-D-cache-aliasing.patch
 	patches.kernel.org/6.12.39-103-ASoC-Intel-sof-function-topology-lib-Print-ou.patch
+	patches.kernel.org/6.12.39-104-netlink-Fix-rmem-check-in-netlink_broadcast_d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
