drm/ttm: fix error handling in ttm_buffer_object_transfer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8557,6 +8557,7 @@
 	patches.kernel.org/6.12.39-073-drm-amdkfd-Don-t-call-mmput-from-MMU-notifier.patch
 	patches.kernel.org/6.12.39-074-drm-gem-Acquire-references-on-GEM-handles-for.patch
 	patches.kernel.org/6.12.39-075-drm-sched-Increment-job-count-before-swapping.patch
+	patches.kernel.org/6.12.39-076-drm-ttm-fix-error-handling-in-ttm_buffer_obje.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
