perf: Revert to requiring CAP_SYS_ADMIN for uprobes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8499,6 +8499,7 @@
 	patches.kernel.org/6.12.39-015-perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock.patch
 	patches.kernel.org/6.12.39-016-irqchip-irq-msi-lib-Select-CONFIG_GENERIC_MSI.patch
 	patches.kernel.org/6.12.39-017-sched-core-Fix-migrate_swap-vs.-hotplug.patch
+	patches.kernel.org/6.12.39-018-perf-Revert-to-requiring-CAP_SYS_ADMIN-for-up.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
