ASoC: fsl_asrc: use internal measured ratio for non-ideal ratio mode (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8488,6 +8488,7 @@
 	patches.kernel.org/6.12.39-004-drm-amdgpu-ip_discovery-add-missing-ip_discov.patch
 	patches.kernel.org/6.12.39-005-crypto-s390-sha-Fix-uninitialized-variable-in.patch
 	patches.kernel.org/6.12.39-006-drm-amdgpu-Replace-Mutex-with-Spinlock-for-RL.patch
+	patches.kernel.org/6.12.39-007-ASoC-fsl_asrc-use-internal-measured-ratio-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
