wifi: prevent A-MSDU attacks in mesh networks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8547,6 +8547,7 @@
 	patches.kernel.org/6.12.39-063-pinctrl-qcom-msm-mark-certain-pins-as-invalid.patch
 	patches.kernel.org/6.12.39-064-pwm-Fix-invalid-state-detection.patch
 	patches.kernel.org/6.12.39-065-pwm-mediatek-Ensure-to-disable-clocks-in-erro.patch
+	patches.kernel.org/6.12.39-066-wifi-prevent-A-MSDU-attacks-in-mesh-networks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
