--- a/series.conf
+++ b/series.conf
@@ -8638,6 +8638,7 @@
 	patches.kernel.org/6.12.39-154-riscv-vdso-Exclude-.rodata-from-the-PT_DYNAMI.patch
 	patches.kernel.org/6.12.39-155-HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 	patches.kernel.org/6.12.39-156-HID-quirks-Add-quirk-for-2-Chicony-Electronic.patch
+	patches.kernel.org/6.12.39-157-HID-nintendo-avoid-bluetooth-suspend-resume-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
