--- a/series.conf
+++ b/series.conf
@@ -8528,6 +8528,7 @@
 	patches.kernel.org/6.12.39-044-net-ethernet-ti-am65-cpsw-nuss-Fix-skb-size-b.patch
 	patches.kernel.org/6.12.39-045-net-sched-Abort-__tc_modify_qdisc-if-parent-c.patch
 	patches.kernel.org/6.12.39-046-rxrpc-Fix-bug-due-to-prealloc-collision.patch
+	patches.kernel.org/6.12.39-047-rxrpc-Fix-oops-due-to-non-existence-of-preall.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
