sched/deadline: Fix dl_server runtime calculation formula (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8505,6 +8505,7 @@
 	patches.kernel.org/6.12.39-021-Bluetooth-hci_event-Fix-not-marking-Broadcast.patch
 	patches.kernel.org/6.12.39-022-pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 	patches.kernel.org/6.12.39-023-fix-proc_sys_compare-handling-of-in-lookup-de.patch
+	patches.kernel.org/6.12.39-024-sched-deadline-Fix-dl_server-runtime-calculat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
