erofs: fix to add missing tracepoint in erofs_readahead() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8604,6 +8604,7 @@
 	patches.kernel.org/6.12.39-120-erofs-get-rid-of-z_erofs_next_pcluster_t.patch
 	patches.kernel.org/6.12.39-121-erofs-tidy-up-zdata.c.patch
 	patches.kernel.org/6.12.39-122-erofs-refine-readahead-tracepoint.patch
+	patches.kernel.org/6.12.39-123-erofs-fix-to-add-missing-tracepoint-in-erofs_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
