drm/amdgpu/discovery: use specific ip_discovery.bin for legacy asics (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8484,6 +8484,7 @@
 	patches.kernel.org/6.12.38-002-Linux-6.12.38.patch
 	patches.kernel.org/6.12.39-001-eventpoll-don-t-decrement-ep-refcount-while-s.patch
 	patches.kernel.org/6.12.39-002-drm-exynos-exynos7_drm_decon-add-vblank-check.patch
+	patches.kernel.org/6.12.39-003-drm-amdgpu-discovery-use-specific-ip_discover.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
