--- a/series.conf
+++ b/series.conf
@@ -8612,6 +8612,7 @@
 	patches.kernel.org/6.12.39-128-net-phy-microchip-limit-100M-workaround-to-li.patch
 	patches.kernel.org/6.12.39-129-selftests-net-lib-Move-logging-from-forwardin.patch
 	patches.kernel.org/6.12.39-130-selftests-net-lib-fix-shift-count-out-of-rang.patch
+	patches.kernel.org/6.12.39-131-drm-xe-pm-Correct-comment-of-xe_pm_set_vram_t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
