can: m_can: m_can_handle_lost_msg(): downgrade msg lost in rx message to debug level (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8613,6 +8613,7 @@
 	patches.kernel.org/6.12.39-129-selftests-net-lib-Move-logging-from-forwardin.patch
 	patches.kernel.org/6.12.39-130-selftests-net-lib-fix-shift-count-out-of-rang.patch
 	patches.kernel.org/6.12.39-131-drm-xe-pm-Correct-comment-of-xe_pm_set_vram_t.patch
+	patches.kernel.org/6.12.39-132-can-m_can-m_can_handle_lost_msg-downgrade-msg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
