rxrpc: Fix bug due to prealloc collision (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8527,6 +8527,7 @@
 	patches.kernel.org/6.12.39-043-atm-clip-Fix-NULL-pointer-dereference-in-vcc_.patch
 	patches.kernel.org/6.12.39-044-net-ethernet-ti-am65-cpsw-nuss-Fix-skb-size-b.patch
 	patches.kernel.org/6.12.39-045-net-sched-Abort-__tc_modify_qdisc-if-parent-c.patch
+	patches.kernel.org/6.12.39-046-rxrpc-Fix-bug-due-to-prealloc-collision.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
