--- a/series.conf
+++ b/series.conf
@@ -8639,6 +8639,7 @@
 	patches.kernel.org/6.12.39-155-HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 	patches.kernel.org/6.12.39-156-HID-quirks-Add-quirk-for-2-Chicony-Electronic.patch
 	patches.kernel.org/6.12.39-157-HID-nintendo-avoid-bluetooth-suspend-resume-s.patch
+	patches.kernel.org/6.12.39-158-selftests-bpf-adapt-one-more-case-in-test_lru.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
