drm/amdkfd: Don't call mmput from MMU notifier callback (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8554,6 +8554,7 @@
 	patches.kernel.org/6.12.39-070-wifi-mt76-mt7925-fix-the-wrong-config-for-tx-.patch
 	patches.kernel.org/6.12.39-071-wifi-mt76-mt7925-fix-invalid-array-index-in-s.patch
 	patches.kernel.org/6.12.39-072-drm-imagination-Fix-kernel-crash-when-hard-re.patch
+	patches.kernel.org/6.12.39-073-drm-amdkfd-Don-t-call-mmput-from-MMU-notifier.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
