ALSA: hda/realtek: Add quirks for some Clevo laptops (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8627,6 +8627,7 @@
 	patches.kernel.org/6.12.39-143-io_uring-make-fallocate-be-hashed-work.patch
 	patches.kernel.org/6.12.39-144-ASoC-amd-yc-add-quirk-for-Acer-Nitro-ANV15-41.patch
 	patches.kernel.org/6.12.39-145-ALSA-hda-realtek-Enable-mute-LED-on-HP-Pavili.patch
+	patches.kernel.org/6.12.39-146-ALSA-hda-realtek-Add-quirks-for-some-Clevo-la.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
