net: wangxun: revert the adjustment of the IRQ vector sequence (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8641,6 +8641,7 @@
 	patches.kernel.org/6.12.39-157-HID-nintendo-avoid-bluetooth-suspend-resume-s.patch
 	patches.kernel.org/6.12.39-158-selftests-bpf-adapt-one-more-case-in-test_lru.patch
 	patches.kernel.org/6.12.39-159-erofs-fix-rare-pcluster-memory-leak-after-unm.patch
+	patches.kernel.org/6.12.39-160-net-wangxun-revert-the-adjustment-of-the-IRQ-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
