ASoC: Intel: soc-acpi: arl: Correct naming of a cs35l56 address struct (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8490,6 +8490,7 @@
 	patches.kernel.org/6.12.39-006-drm-amdgpu-Replace-Mutex-with-Spinlock-for-RL.patch
 	patches.kernel.org/6.12.39-007-ASoC-fsl_asrc-use-internal-measured-ratio-for.patch
 	patches.kernel.org/6.12.39-008-ASoC-Intel-SND_SOC_INTEL_SOF_BOARD_HELPERS-se.patch
+	patches.kernel.org/6.12.39-009-ASoC-Intel-soc-acpi-arl-Correct-naming-of-a-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
