--- a/series.conf
+++ b/series.conf
@@ -8567,6 +8567,7 @@
 	patches.kernel.org/6.12.39-083-drm-xe-Allocate-PF-queue-size-on-pow2-boundar.patch
 	patches.kernel.org/6.12.39-084-Revert-ACPI-battery-negate-current-when-disch.patch
 	patches.kernel.org/6.12.39-085-Revert-PCI-ACPI-Fix-allocated-memory-release-.patch
+	patches.kernel.org/6.12.39-086-kallsyms-fix-build-without-execinfo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
