drm/framebuffer: Acquire internal references on GEM handles (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8563,6 +8563,7 @@
 	patches.kernel.org/6.12.39-079-Revert-drm-xe-xe2-Enable-Indirect-Ring-State-.patch
 	patches.kernel.org/6.12.39-080-usb-gadget-u_serial-Fix-race-condition-in-TTY.patch
 	patches.kernel.org/6.12.39-081-Revert-usb-gadget-u_serial-Add-null-pointer-c.patch
+	patches.kernel.org/6.12.39-082-drm-framebuffer-Acquire-internal-references-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
