--- a/series.conf
+++ b/series.conf
@@ -8524,6 +8524,7 @@
 	patches.kernel.org/6.12.39-040-atm-clip-Fix-potential-null-ptr-deref-in-to_a.patch
 	patches.kernel.org/6.12.39-041-atm-clip-Fix-memory-leak-of-struct-clip_vcc.patch
 	patches.kernel.org/6.12.39-042-atm-clip-Fix-infinite-recursive-call-of-clip_.patch
+	patches.kernel.org/6.12.39-043-atm-clip-Fix-NULL-pointer-dereference-in-vcc_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
