netlink: Fix wraparounds of sk->sk_rmem_alloc (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8510,6 +8510,7 @@
 	patches.kernel.org/6.12.39-026-arm64-poe-Handle-spurious-Overlay-faults.patch
 	patches.kernel.org/6.12.39-027-net-phy-qcom-move-the-WoL-function-to-shared-.patch
 	patches.kernel.org/6.12.39-028-net-phy-qcom-qca808x-Fix-WoL-issue-by-utilizi.patch
+	patches.kernel.org/6.12.39-029-netlink-Fix-wraparounds-of-sk-sk_rmem_alloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
