pinctrl: qcom: msm: mark certain pins as invalid for interrupts (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8544,6 +8544,7 @@
 	patches.kernel.org/6.12.39-060-gre-Fix-IPv6-multicast-route-creation.patch
 	patches.kernel.org/6.12.39-061-net-ethernet-rtsn-Fix-a-null-pointer-derefere.patch
 	patches.kernel.org/6.12.39-062-md-md-bitmap-fix-GPF-in-bitmap_get_stats.patch
+	patches.kernel.org/6.12.39-063-pinctrl-qcom-msm-mark-certain-pins-as-invalid.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
