net: phy: smsc: Force predictable MDI-X state on LAN87xx (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8519,6 +8519,7 @@
 	patches.kernel.org/6.12.39-035-vsock-Fix-IOCTL_VM_SOCKETS_GET_LOCAL_CID-to-c.patch
 	patches.kernel.org/6.12.39-036-net-stmmac-Fix-interrupt-handling-for-level-t.patch
 	patches.kernel.org/6.12.39-037-net-phy-smsc-Fix-Auto-MDIX-configuration-when.patch
+	patches.kernel.org/6.12.39-038-net-phy-smsc-Force-predictable-MDI-X-state-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
