drm/xe/pf: Clear all LMTT pages on alloc (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8599,6 +8599,7 @@
 	patches.kernel.org/6.12.39-115-drm-nouveau-gsp-fix-potential-leak-of-memory-.patch
 	patches.kernel.org/6.12.39-116-wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925.patch
 	patches.kernel.org/6.12.39-117-nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
+	patches.kernel.org/6.12.39-118-drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
