maple_tree: fix mt_destroy_walk() on root leaf node (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8568,6 +8568,7 @@
 	patches.kernel.org/6.12.39-084-Revert-ACPI-battery-negate-current-when-disch.patch
 	patches.kernel.org/6.12.39-085-Revert-PCI-ACPI-Fix-allocated-memory-release-.patch
 	patches.kernel.org/6.12.39-086-kallsyms-fix-build-without-execinfo.patch
+	patches.kernel.org/6.12.39-087-maple_tree-fix-mt_destroy_walk-on-root-leaf-n.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
