--- a/series.conf
+++ b/series.conf
@@ -8574,6 +8574,7 @@
 	patches.kernel.org/6.12.39-090-scripts-gdb-de-reference-per-CPU-MCE-interrup.patch
 	patches.kernel.org/6.12.39-091-scripts-gdb-fix-interrupts.py-after-maple-tre.patch
 	patches.kernel.org/6.12.39-092-mm-vmalloc-leave-lazy-MMU-mode-on-PTE-mapping.patch
+	patches.kernel.org/6.12.39-093-lib-alloc_tag-do-not-acquire-non-existent-loc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
