--- a/series.conf
+++ b/series.conf
@@ -8550,6 +8550,7 @@
 	patches.kernel.org/6.12.39-066-wifi-prevent-A-MSDU-attacks-in-mesh-networks.patch
 	patches.kernel.org/6.12.39-067-wifi-mwifiex-discard-erroneous-disassoc-frame.patch
 	patches.kernel.org/6.12.39-068-wifi-mt76-mt7921-prevent-decap-offload-config.patch
+	patches.kernel.org/6.12.39-069-wifi-mt76-mt7925-prevent-NULL-pointer-derefer.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
