wifi: mt76: mt7925: Fix null-ptr-deref in mt7925_thermal_init() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8597,6 +8597,7 @@
 	patches.kernel.org/6.12.39-113-wifi-mac80211-fix-non-transmitted-BSSID-profi.patch
 	patches.kernel.org/6.12.39-114-wifi-rt2x00-fix-remove-callback-type-mismatch.patch
 	patches.kernel.org/6.12.39-115-drm-nouveau-gsp-fix-potential-leak-of-memory-.patch
+	patches.kernel.org/6.12.39-116-wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
