--- a/series.conf
+++ b/series.conf
@@ -8640,6 +8640,7 @@
 	patches.kernel.org/6.12.39-156-HID-quirks-Add-quirk-for-2-Chicony-Electronic.patch
 	patches.kernel.org/6.12.39-157-HID-nintendo-avoid-bluetooth-suspend-resume-s.patch
 	patches.kernel.org/6.12.39-158-selftests-bpf-adapt-one-more-case-in-test_lru.patch
+	patches.kernel.org/6.12.39-159-erofs-fix-rare-pcluster-memory-leak-after-unm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
