erofs: refine readahead tracepoint (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8603,6 +8603,7 @@
 	patches.kernel.org/6.12.39-119-erofs-free-pclusters-if-no-cached-folio-is-at.patch
 	patches.kernel.org/6.12.39-120-erofs-get-rid-of-z_erofs_next_pcluster_t.patch
 	patches.kernel.org/6.12.39-121-erofs-tidy-up-zdata.c.patch
+	patches.kernel.org/6.12.39-122-erofs-refine-readahead-tracepoint.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
