--- a/series.conf
+++ b/series.conf
@@ -8636,6 +8636,7 @@
 	patches.kernel.org/6.12.39-152-vt-add-missing-notification-when-switching-ba.patch
 	patches.kernel.org/6.12.39-153-bpf-Adjust-free-target-to-avoid-global-starva.patch
 	patches.kernel.org/6.12.39-154-riscv-vdso-Exclude-.rodata-from-the-PT_DYNAMI.patch
+	patches.kernel.org/6.12.39-155-HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
