ublk: sanity check add_dev input for underflow (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8619,6 +8619,7 @@
 	patches.kernel.org/6.12.39-135-net-ll_temac-Fix-missing-tx_pending-check-in-.patch
 	patches.kernel.org/6.12.39-136-bnxt_en-Fix-DCB-ETS-validation.patch
 	patches.kernel.org/6.12.39-137-bnxt_en-Set-DMA-unmap-len-correctly-for-XDP_R.patch
+	patches.kernel.org/6.12.39-138-ublk-sanity-check-add_dev-input-for-underflow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
