--- a/series.conf
+++ b/series.conf
@@ -8589,6 +8589,7 @@
 	patches.kernel.org/6.12.39-105-netlink-make-sure-we-allow-at-least-one-dump-.patch
 	patches.kernel.org/6.12.39-106-netfs-Fix-ref-leak-on-inserted-extra-subreq-i.patch
 	patches.kernel.org/6.12.39-107-wifi-cfg80211-fix-S1G-beacon-head-validation-.patch
+	patches.kernel.org/6.12.39-108-wifi-zd1211rw-Fix-potential-NULL-pointer-dere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
