--- a/series.conf
+++ b/series.conf
@@ -8491,6 +8491,7 @@
 	patches.kernel.org/6.12.39-007-ASoC-fsl_asrc-use-internal-measured-ratio-for.patch
 	patches.kernel.org/6.12.39-008-ASoC-Intel-SND_SOC_INTEL_SOF_BOARD_HELPERS-se.patch
 	patches.kernel.org/6.12.39-009-ASoC-Intel-soc-acpi-arl-Correct-naming-of-a-c.patch
+	patches.kernel.org/6.12.39-010-ASoC-Intel-soc-acpi-arl-Add-match-entries-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
