--- a/series.conf
+++ b/series.conf
@@ -8512,6 +8512,7 @@
 	patches.kernel.org/6.12.39-028-net-phy-qcom-qca808x-Fix-WoL-issue-by-utilizi.patch
 	patches.kernel.org/6.12.39-029-netlink-Fix-wraparounds-of-sk-sk_rmem_alloc.patch
 	patches.kernel.org/6.12.39-030-vsock-fix-vsock_proto-declaration.patch
+	patches.kernel.org/6.12.39-031-tipc-Fix-use-after-free-in-tipc_conn_close.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
