--- a/series.conf
+++ b/series.conf
@@ -8565,6 +8565,7 @@
 	patches.kernel.org/6.12.39-081-Revert-usb-gadget-u_serial-Add-null-pointer-c.patch
 	patches.kernel.org/6.12.39-082-drm-framebuffer-Acquire-internal-references-o.patch
 	patches.kernel.org/6.12.39-083-drm-xe-Allocate-PF-queue-size-on-pow2-boundar.patch
+	patches.kernel.org/6.12.39-084-Revert-ACPI-battery-negate-current-when-disch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
