--- a/series.conf
+++ b/series.conf
@@ -8628,6 +8628,7 @@
 	patches.kernel.org/6.12.39-144-ASoC-amd-yc-add-quirk-for-Acer-Nitro-ANV15-41.patch
 	patches.kernel.org/6.12.39-145-ALSA-hda-realtek-Enable-mute-LED-on-HP-Pavili.patch
 	patches.kernel.org/6.12.39-146-ALSA-hda-realtek-Add-quirks-for-some-Clevo-la.patch
+	patches.kernel.org/6.12.39-147-net-usb-qmi_wwan-add-SIMCom-8230C-composition.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
