irqchip/irq-msi-lib: Select CONFIG_GENERIC_MSI_IRQ (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8497,6 +8497,7 @@
 	patches.kernel.org/6.12.39-013-ASoC-Intel-soc-acpi-intel-arl-match-set-get_f.patch
 	patches.kernel.org/6.12.39-014-ASoC-Intel-soc-acpi-arl-Correct-order-of-cs42.patch
 	patches.kernel.org/6.12.39-015-perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock.patch
+	patches.kernel.org/6.12.39-016-irqchip-irq-msi-lib-Select-CONFIG_GENERIC_MSI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
