--- a/series.conf
+++ b/series.conf
@@ -8555,6 +8555,7 @@
 	patches.kernel.org/6.12.39-071-wifi-mt76-mt7925-fix-invalid-array-index-in-s.patch
 	patches.kernel.org/6.12.39-072-drm-imagination-Fix-kernel-crash-when-hard-re.patch
 	patches.kernel.org/6.12.39-073-drm-amdkfd-Don-t-call-mmput-from-MMU-notifier.patch
+	patches.kernel.org/6.12.39-074-drm-gem-Acquire-references-on-GEM-handles-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
