netfilter: flowtable: account for Ethernet header in nf_flow_pppoe_proto() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8605,6 +8605,7 @@
 	patches.kernel.org/6.12.39-121-erofs-tidy-up-zdata.c.patch
 	patches.kernel.org/6.12.39-122-erofs-refine-readahead-tracepoint.patch
 	patches.kernel.org/6.12.39-123-erofs-fix-to-add-missing-tracepoint-in-erofs_.patch
+	patches.kernel.org/6.12.39-124-netfilter-flowtable-account-for-Ethernet-head.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
