--- a/series.conf
+++ b/series.conf
@@ -8486,6 +8486,7 @@
 	patches.kernel.org/6.12.39-002-drm-exynos-exynos7_drm_decon-add-vblank-check.patch
 	patches.kernel.org/6.12.39-003-drm-amdgpu-discovery-use-specific-ip_discover.patch
 	patches.kernel.org/6.12.39-004-drm-amdgpu-ip_discovery-add-missing-ip_discov.patch
+	patches.kernel.org/6.12.39-005-crypto-s390-sha-Fix-uninitialized-variable-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
