--- a/series.conf
+++ b/series.conf
@@ -8539,6 +8539,7 @@
 	patches.kernel.org/6.12.39-055-KVM-SVM-Add-missing-member-in-SNP_LAUNCH_STAR.patch
 	patches.kernel.org/6.12.39-056-KVM-SVM-Reject-SEV-ES-intra-host-migration-if.patch
 	patches.kernel.org/6.12.39-057-KVM-Allow-CPU-to-reschedule-while-setting-per.patch
+	patches.kernel.org/6.12.39-058-ALSA-ad1816a-Fix-potential-NULL-pointer-deref.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
