smb: server: make use of rdma_destroy_qp() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8580,6 +8580,7 @@
 	patches.kernel.org/6.12.39-096-x86-rdrand-Disable-RDSEED-on-AMD-Cyan-Skillfi.patch
 	patches.kernel.org/6.12.39-097-x86-mm-Disable-hugetlb-page-table-sharing-on-.patch
 	patches.kernel.org/6.12.39-098-clk-scmi-Handle-case-where-child-clocks-are-i.patch
+	patches.kernel.org/6.12.39-099-smb-server-make-use-of-rdma_destroy_qp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
