Revert "PCI/ACPI: Fix allocated memory release on error in pci_acpi_scan_root()" (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8566,6 +8566,7 @@
 	patches.kernel.org/6.12.39-082-drm-framebuffer-Acquire-internal-references-o.patch
 	patches.kernel.org/6.12.39-083-drm-xe-Allocate-PF-queue-size-on-pow2-boundar.patch
 	patches.kernel.org/6.12.39-084-Revert-ACPI-battery-negate-current-when-disch.patch
+	patches.kernel.org/6.12.39-085-Revert-PCI-ACPI-Fix-allocated-memory-release-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
