KVM: SVM: Set synthesized TSA CPUID flags (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8647,6 +8647,7 @@
 	patches.kernel.org/6.12.39-163-arm64-Filter-out-SME-hwcaps-when-FEAT_SME-isn.patch
 	patches.kernel.org/6.12.39-164-crypto-ecdsa-Harden-against-integer-overflows.patch
 	patches.kernel.org/6.12.39-165-rseq-Fix-segfault-on-registration-when-rseq_c.patch
+	patches.kernel.org/6.12.39-166-KVM-SVM-Set-synthesized-TSA-CPUID-flags.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
