--- a/series.conf
+++ b/series.conf
@@ -8615,6 +8615,7 @@
 	patches.kernel.org/6.12.39-131-drm-xe-pm-Correct-comment-of-xe_pm_set_vram_t.patch
 	patches.kernel.org/6.12.39-132-can-m_can-m_can_handle_lost_msg-downgrade-msg.patch
 	patches.kernel.org/6.12.39-133-net-mlx5e-Fix-race-between-DIM-disable-and-ne.patch
+	patches.kernel.org/6.12.39-134-net-mlx5e-Add-new-prio-for-promiscuous-mode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
