ibmvnic: Fix hardcoded NUM_RX_STATS/NUM_TX_STATS with dynamic sizeof (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8607,6 +8607,7 @@
 	patches.kernel.org/6.12.39-123-erofs-fix-to-add-missing-tracepoint-in-erofs_.patch
 	patches.kernel.org/6.12.39-124-netfilter-flowtable-account-for-Ethernet-head.patch
 	patches.kernel.org/6.12.39-125-net-appletalk-Fix-device-refcount-leak-in-atr.patch
+	patches.kernel.org/6.12.39-126-ibmvnic-Fix-hardcoded-NUM_RX_STATS-NUM_TX_STA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
