mm/vmalloc: leave lazy MMU mode on PTE mapping error (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8573,6 +8573,7 @@
 	patches.kernel.org/6.12.39-089-scripts-gdb-fix-interrupts-display-after-MCP-.patch
 	patches.kernel.org/6.12.39-090-scripts-gdb-de-reference-per-CPU-MCE-interrup.patch
 	patches.kernel.org/6.12.39-091-scripts-gdb-fix-interrupts.py-after-maple-tre.patch
+	patches.kernel.org/6.12.39-092-mm-vmalloc-leave-lazy-MMU-mode-on-PTE-mapping.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
