--- a/series.conf
+++ b/series.conf
@@ -8535,6 +8535,7 @@
 	patches.kernel.org/6.12.39-051-x86-mce-Don-t-remove-sysfs-if-thresholding-sy.patch
 	patches.kernel.org/6.12.39-052-x86-mce-Ensure-user-polling-settings-are-hono.patch
 	patches.kernel.org/6.12.39-053-x86-mce-Make-sure-CMCI-banks-are-cleared-duri.patch
+	patches.kernel.org/6.12.39-054-KVM-x86-xen-Allow-out-of-range-event-channel-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
