rust: init: allow `dead_code` warnings for Rust >= 1.89.0 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8575,6 +8575,7 @@
 	patches.kernel.org/6.12.39-091-scripts-gdb-fix-interrupts.py-after-maple-tre.patch
 	patches.kernel.org/6.12.39-092-mm-vmalloc-leave-lazy-MMU-mode-on-PTE-mapping.patch
 	patches.kernel.org/6.12.39-093-lib-alloc_tag-do-not-acquire-non-existent-loc.patch
+	patches.kernel.org/6.12.39-094-rust-init-allow-dead_code-warnings-for-Rust-1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
