tcp: Correct signedness in skb remaining space calculation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8513,6 +8513,7 @@
 	patches.kernel.org/6.12.39-029-netlink-Fix-wraparounds-of-sk-sk_rmem_alloc.patch
 	patches.kernel.org/6.12.39-030-vsock-fix-vsock_proto-declaration.patch
 	patches.kernel.org/6.12.39-031-tipc-Fix-use-after-free-in-tipc_conn_close.patch
+	patches.kernel.org/6.12.39-032-tcp-Correct-signedness-in-skb-remaining-space.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
