--- a/series.conf
+++ b/series.conf
@@ -8606,6 +8606,7 @@
 	patches.kernel.org/6.12.39-122-erofs-refine-readahead-tracepoint.patch
 	patches.kernel.org/6.12.39-123-erofs-fix-to-add-missing-tracepoint-in-erofs_.patch
 	patches.kernel.org/6.12.39-124-netfilter-flowtable-account-for-Ethernet-head.patch
+	patches.kernel.org/6.12.39-125-net-appletalk-Fix-device-refcount-leak-in-atr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
