--- a/series.conf
+++ b/series.conf
@@ -8637,6 +8637,7 @@
 	patches.kernel.org/6.12.39-153-bpf-Adjust-free-target-to-avoid-global-starva.patch
 	patches.kernel.org/6.12.39-154-riscv-vdso-Exclude-.rodata-from-the-PT_DYNAMI.patch
 	patches.kernel.org/6.12.39-155-HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
+	patches.kernel.org/6.12.39-156-HID-quirks-Add-quirk-for-2-Chicony-Electronic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
