--- a/series.conf
+++ b/series.conf
@@ -8514,6 +8514,7 @@
 	patches.kernel.org/6.12.39-030-vsock-fix-vsock_proto-declaration.patch
 	patches.kernel.org/6.12.39-031-tipc-Fix-use-after-free-in-tipc_conn_close.patch
 	patches.kernel.org/6.12.39-032-tcp-Correct-signedness-in-skb-remaining-space.patch
+	patches.kernel.org/6.12.39-033-vsock-Fix-transport_-g2h-h2g-TOCTOU.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
