--- a/series.conf
+++ b/series.conf
@@ -8591,6 +8591,7 @@
 	patches.kernel.org/6.12.39-107-wifi-cfg80211-fix-S1G-beacon-head-validation-.patch
 	patches.kernel.org/6.12.39-108-wifi-zd1211rw-Fix-potential-NULL-pointer-dere.patch
 	patches.kernel.org/6.12.39-109-drm-tegra-nvdec-Fix-dma_alloc_coherent-error-.patch
+	patches.kernel.org/6.12.39-110-md-raid1-Fix-stack-memory-use-after-return-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
