pwm: Fix invalid state detection (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8545,6 +8545,7 @@
 	patches.kernel.org/6.12.39-061-net-ethernet-rtsn-Fix-a-null-pointer-derefere.patch
 	patches.kernel.org/6.12.39-062-md-md-bitmap-fix-GPF-in-bitmap_get_stats.patch
 	patches.kernel.org/6.12.39-063-pinctrl-qcom-msm-mark-certain-pins-as-invalid.patch
+	patches.kernel.org/6.12.39-064-pwm-Fix-invalid-state-detection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
