--- a/series.conf
+++ b/series.conf
@@ -8546,6 +8546,7 @@
 	patches.kernel.org/6.12.39-062-md-md-bitmap-fix-GPF-in-bitmap_get_stats.patch
 	patches.kernel.org/6.12.39-063-pinctrl-qcom-msm-mark-certain-pins-as-invalid.patch
 	patches.kernel.org/6.12.39-064-pwm-Fix-invalid-state-detection.patch
+	patches.kernel.org/6.12.39-065-pwm-mediatek-Ensure-to-disable-clocks-in-erro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
