wifi: mt76: mt7925: fix the wrong config for tx interrupt (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8551,6 +8551,7 @@
 	patches.kernel.org/6.12.39-067-wifi-mwifiex-discard-erroneous-disassoc-frame.patch
 	patches.kernel.org/6.12.39-068-wifi-mt76-mt7921-prevent-decap-offload-config.patch
 	patches.kernel.org/6.12.39-069-wifi-mt76-mt7925-prevent-NULL-pointer-derefer.patch
+	patches.kernel.org/6.12.39-070-wifi-mt76-mt7925-fix-the-wrong-config-for-tx-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
