pinctrl: amd: Clear GPIO debounce for suspend (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8503,6 +8503,7 @@
 	patches.kernel.org/6.12.39-019-ASoC-cs35l56-probe-should-fail-if-the-device-.patch
 	patches.kernel.org/6.12.39-020-Bluetooth-hci_sync-Fix-not-disabling-advertis.patch
 	patches.kernel.org/6.12.39-021-Bluetooth-hci_event-Fix-not-marking-Broadcast.patch
+	patches.kernel.org/6.12.39-022-pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
