net: ll_temac: Fix missing tx_pending check in ethtools_set_ringparam() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8616,6 +8616,7 @@
 	patches.kernel.org/6.12.39-132-can-m_can-m_can_handle_lost_msg-downgrade-msg.patch
 	patches.kernel.org/6.12.39-133-net-mlx5e-Fix-race-between-DIM-disable-and-ne.patch
 	patches.kernel.org/6.12.39-134-net-mlx5e-Add-new-prio-for-promiscuous-mode.patch
+	patches.kernel.org/6.12.39-135-net-ll_temac-Fix-missing-tx_pending-check-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
