ASoC: fsl_sai: Force a software reset when starting in consumer mode (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8540,6 +8540,7 @@
 	patches.kernel.org/6.12.39-056-KVM-SVM-Reject-SEV-ES-intra-host-migration-if.patch
 	patches.kernel.org/6.12.39-057-KVM-Allow-CPU-to-reschedule-while-setting-per.patch
 	patches.kernel.org/6.12.39-058-ALSA-ad1816a-Fix-potential-NULL-pointer-deref.patch
+	patches.kernel.org/6.12.39-059-ASoC-fsl_sai-Force-a-software-reset-when-star.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
