HID: lenovo: Add support for ThinkPad X1 Tablet Thin Keyboard Gen2 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8630,6 +8630,7 @@
 	patches.kernel.org/6.12.39-146-ALSA-hda-realtek-Add-quirks-for-some-Clevo-la.patch
 	patches.kernel.org/6.12.39-147-net-usb-qmi_wwan-add-SIMCom-8230C-composition.patch
 	patches.kernel.org/6.12.39-148-driver-bluetooth-hci_qca-fix-unable-to-load-t.patch
+	patches.kernel.org/6.12.39-149-HID-lenovo-Add-support-for-ThinkPad-X1-Tablet.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
