selftests: net: lib: fix shift count out of range (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8611,6 +8611,7 @@
 	patches.kernel.org/6.12.39-127-net-phy-microchip-Use-genphy_soft_reset-to-pu.patch
 	patches.kernel.org/6.12.39-128-net-phy-microchip-limit-100M-workaround-to-li.patch
 	patches.kernel.org/6.12.39-129-selftests-net-lib-Move-logging-from-forwardin.patch
+	patches.kernel.org/6.12.39-130-selftests-net-lib-fix-shift-count-out-of-rang.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
