ASoC: Intel: soc-acpi-intel-arl-match: set get_function_tplg_files ops (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8494,6 +8494,7 @@
 	patches.kernel.org/6.12.39-010-ASoC-Intel-soc-acpi-arl-Add-match-entries-for.patch
 	patches.kernel.org/6.12.39-011-ASoC-soc-acpi-add-get_function_tplg_files-ops.patch
 	patches.kernel.org/6.12.39-012-ASoC-Intel-add-sof_sdw_get_tplg_files-ops.patch
+	patches.kernel.org/6.12.39-013-ASoC-Intel-soc-acpi-intel-arl-match-set-get_f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
