raid10: cleanup memleak at raid10_make_request (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8592,6 +8592,7 @@
 	patches.kernel.org/6.12.39-108-wifi-zd1211rw-Fix-potential-NULL-pointer-dere.patch
 	patches.kernel.org/6.12.39-109-drm-tegra-nvdec-Fix-dma_alloc_coherent-error-.patch
 	patches.kernel.org/6.12.39-110-md-raid1-Fix-stack-memory-use-after-return-in.patch
+	patches.kernel.org/6.12.39-111-raid10-cleanup-memleak-at-raid10_make_request.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
