--- a/series.conf
+++ b/series.conf
@@ -8492,6 +8492,7 @@
 	patches.kernel.org/6.12.39-008-ASoC-Intel-SND_SOC_INTEL_SOF_BOARD_HELPERS-se.patch
 	patches.kernel.org/6.12.39-009-ASoC-Intel-soc-acpi-arl-Correct-naming-of-a-c.patch
 	patches.kernel.org/6.12.39-010-ASoC-Intel-soc-acpi-arl-Add-match-entries-for.patch
+	patches.kernel.org/6.12.39-011-ASoC-soc-acpi-add-get_function_tplg_files-ops.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
