drm/amdgpu/ip_discovery: add missing ip_discovery fw (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8485,6 +8485,7 @@
 	patches.kernel.org/6.12.39-001-eventpoll-don-t-decrement-ep-refcount-while-s.patch
 	patches.kernel.org/6.12.39-002-drm-exynos-exynos7_drm_decon-add-vblank-check.patch
 	patches.kernel.org/6.12.39-003-drm-amdgpu-discovery-use-specific-ip_discover.patch
+	patches.kernel.org/6.12.39-004-drm-amdgpu-ip_discovery-add-missing-ip_discov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
