scripts/gdb: de-reference per-CPU MCE interrupts (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8571,6 +8571,7 @@
 	patches.kernel.org/6.12.39-087-maple_tree-fix-mt_destroy_walk-on-root-leaf-n.patch
 	patches.kernel.org/6.12.39-088-mm-fix-the-inaccurate-memory-statistics-issue.patch
 	patches.kernel.org/6.12.39-089-scripts-gdb-fix-interrupts-display-after-MCP-.patch
+	patches.kernel.org/6.12.39-090-scripts-gdb-de-reference-per-CPU-MCE-interrup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
