--- a/series.conf
+++ b/series.conf
@@ -8587,6 +8587,7 @@
 	patches.kernel.org/6.12.39-103-ASoC-Intel-sof-function-topology-lib-Print-ou.patch
 	patches.kernel.org/6.12.39-104-netlink-Fix-rmem-check-in-netlink_broadcast_d.patch
 	patches.kernel.org/6.12.39-105-netlink-make-sure-we-allow-at-least-one-dump-.patch
+	patches.kernel.org/6.12.39-106-netfs-Fix-ref-leak-on-inserted-extra-subreq-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
