KVM: Allow CPU to reschedule while setting per-page memory attributes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8538,6 +8538,7 @@
 	patches.kernel.org/6.12.39-054-KVM-x86-xen-Allow-out-of-range-event-channel-.patch
 	patches.kernel.org/6.12.39-055-KVM-SVM-Add-missing-member-in-SNP_LAUNCH_STAR.patch
 	patches.kernel.org/6.12.39-056-KVM-SVM-Reject-SEV-ES-intra-host-migration-if.patch
+	patches.kernel.org/6.12.39-057-KVM-Allow-CPU-to-reschedule-while-setting-per.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
