ksmbd: fix a mount write count leak in ksmbd_vfs_kern_path_locked() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8581,6 +8581,7 @@
 	patches.kernel.org/6.12.39-097-x86-mm-Disable-hugetlb-page-table-sharing-on-.patch
 	patches.kernel.org/6.12.39-098-clk-scmi-Handle-case-where-child-clocks-are-i.patch
 	patches.kernel.org/6.12.39-099-smb-server-make-use-of-rdma_destroy_qp.patch
+	patches.kernel.org/6.12.39-100-ksmbd-fix-a-mount-write-count-leak-in-ksmbd_v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
