--- a/series.conf
+++ b/series.conf
@@ -8622,6 +8622,7 @@
 	patches.kernel.org/6.12.39-138-ublk-sanity-check-add_dev-input-for-underflow.patch
 	patches.kernel.org/6.12.39-139-atm-idt77252-Add-missing-dma_map_error.patch
 	patches.kernel.org/6.12.39-140-um-vector-Reduce-stack-usage-in-vector_eth_co.patch
+	patches.kernel.org/6.12.39-141-ASoC-SOF-Intel-hda-Use-devm_kstrdup-to-avoid-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
