--- a/series.conf
+++ b/series.conf
@@ -8531,6 +8531,7 @@
 	patches.kernel.org/6.12.39-047-rxrpc-Fix-oops-due-to-non-existence-of-preall.patch
 	patches.kernel.org/6.12.39-048-ipmi-msghandler-Fix-potential-memory-corrupti.patch
 	patches.kernel.org/6.12.39-049-x86-mce-amd-Add-default-names-for-MCA-banks-a.patch
+	patches.kernel.org/6.12.39-050-x86-mce-amd-Fix-threshold-limit-reset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
