erofs: address D-cache aliasing (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8583,6 +8583,7 @@
 	patches.kernel.org/6.12.39-099-smb-server-make-use-of-rdma_destroy_qp.patch
 	patches.kernel.org/6.12.39-100-ksmbd-fix-a-mount-write-count-leak-in-ksmbd_v.patch
 	patches.kernel.org/6.12.39-101-erofs-fix-to-add-missing-tracepoint-in-erofs_.patch
+	patches.kernel.org/6.12.39-102-erofs-address-D-cache-aliasing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
