--- a/series.conf
+++ b/series.conf
@@ -8521,6 +8521,7 @@
 	patches.kernel.org/6.12.39-037-net-phy-smsc-Fix-Auto-MDIX-configuration-when.patch
 	patches.kernel.org/6.12.39-038-net-phy-smsc-Force-predictable-MDI-X-state-on.patch
 	patches.kernel.org/6.12.39-039-net-phy-smsc-Fix-link-failure-in-forced-mode-.patch
+	patches.kernel.org/6.12.39-040-atm-clip-Fix-potential-null-ptr-deref-in-to_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
