--- a/series.conf
+++ b/series.conf
@@ -8614,6 +8614,7 @@
 	patches.kernel.org/6.12.39-130-selftests-net-lib-fix-shift-count-out-of-rang.patch
 	patches.kernel.org/6.12.39-131-drm-xe-pm-Correct-comment-of-xe_pm_set_vram_t.patch
 	patches.kernel.org/6.12.39-132-can-m_can-m_can_handle_lost_msg-downgrade-msg.patch
+	patches.kernel.org/6.12.39-133-net-mlx5e-Fix-race-between-DIM-disable-and-ne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
