wifi: mac80211: fix non-transmitted BSSID profile search (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8594,6 +8594,7 @@
 	patches.kernel.org/6.12.39-110-md-raid1-Fix-stack-memory-use-after-return-in.patch
 	patches.kernel.org/6.12.39-111-raid10-cleanup-memleak-at-raid10_make_request.patch
 	patches.kernel.org/6.12.39-112-wifi-mac80211-correctly-identify-S1G-short-be.patch
+	patches.kernel.org/6.12.39-113-wifi-mac80211-fix-non-transmitted-BSSID-profi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
