atm: clip: Fix infinite recursive call of clip_push() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8523,6 +8523,7 @@
 	patches.kernel.org/6.12.39-039-net-phy-smsc-Fix-link-failure-in-forced-mode-.patch
 	patches.kernel.org/6.12.39-040-atm-clip-Fix-potential-null-ptr-deref-in-to_a.patch
 	patches.kernel.org/6.12.39-041-atm-clip-Fix-memory-leak-of-struct-clip_vcc.patch
+	patches.kernel.org/6.12.39-042-atm-clip-Fix-infinite-recursive-call-of-clip_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
